--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,11 +1,11 @@
 
-ftp.server.ip=192.168.0.108
-ftp.user=geely
-ftp.pass=geely
-ftp.server.http.prefix=http://img.happymmall.com/
+#ftp.server.ip=192.168.0.108
+#ftp.user=geely
+#ftp.pass=geely
+#ftp.server.http.prefix=http://img.happymmall.com/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+#alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
